fixed image going out of screen view port error

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ img {
   padding: var(--spacing);
   background: var(--base);
   filter: blur(var(--blur));
+  max-width: 90%; 
+  height: auto;  
+  display: block;
+  margin: 0 auto;
 }
 
 .hl {
